--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -29,10 +29,10 @@
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
     "typescript": "~5.2.0",
-    "vite": "^4.4.0",
+    "vite": "4.4.0",
     "vue-tsc": "^1.8.25"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.4.0"
+    "@rollup/rollup-linux-x64-gnu": "^4.8.0"
   }
 }
