--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -16,7 +16,7 @@
     "vue": "^3.3.10"
   },
   "devDependencies": {
-    "@rollup/rollup-win32-x64-msvc": "4.4.0",
+    "@rollup/rollup-linux-x64-msvc": "^4.8.0",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.19.2",
@@ -33,6 +33,6 @@
     "vue-tsc": "^1.8.25"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.4.0"
+    "@rollup/rollup-win32-x64-gnu": "^4.8.0"
   }
 }
